--- a/nailgun/static/i18n/translation.json
+++ b/nailgun/static/i18n/translation.json
@@ -14,6 +14,8 @@
                 "reset_button": "Reset",
                 "save_settings_button": "Save Settings",
                 "cancel_button": "Cancel",
+                "update_button": "Update",
+                "rollback_button": "Rollback",
                 "apply_changes_button": "Apply Changes",
                 "not_available": "N/A",
                 "size": {
@@ -227,7 +229,12 @@
                     "reset_environment_warning": "This action will reset all existing nodes to their pre-deployment state, deleting your existing environment.",
                     "reset_disabled_for_new_cluster": "Reset Environment is not available for an environment not yet deployed.",
                     "repeated_reset_disabled": "The current environment is already being reset.",
-                    "reset_disabled_for_deploying_cluster": "Reset Environment is not available for an environment still being deployed. Use Stop Deployment to stop the deployment process."
+                    "reset_disabled_for_deploying_cluster": "Reset Environment is not available for an environment still being deployed. Use Stop Deployment to stop the deployment process.",
+                    "update_cluster": "Update Environment",
+                    "choose_release": "choose release ...",
+                    "update_release_message": "Choose release to update environment.",
+                    "no_releases_to_update_message": "You already have the latest release installed.",
+                    "rollback_message": "You can only rollback your environment."
                 },
                 "network_tab": {
                     "title": "Network Settings",
@@ -482,6 +489,14 @@
                 "reset_environment": {
                     "title": "Reset Environment",
                     "text": "Are you sure you want to reset this environment? All nodes in the environment will be deleted and returned to their pre-deployment state."
+                },
+                "update_environment": {
+                    "title": "Update Environment",
+                    "text": "Are you sure you want to update the environment?"
+                },
+                "rollback_environment": {
+                    "title": "Rollback Environment",
+                    "text": "Are you sure you want to rollback the environment?"
                 },
                 "error_occured": {
                     "alert_text": "A server error has occured. Please contact the administrators."
