--- a/nailgun/static/i18n/translation.json
+++ b/nailgun/static/i18n/translation.json
@@ -128,7 +128,10 @@
                 "cluster_hardware_nodes": "Nodes",
                 "cluster_hardware_cpu": "CPU (cores)",
                 "cluster_hardware_hdd": "HDD",
-                "cluster_hardware_ram": "RAM"
+                "cluster_hardware_ram": "RAM",
+                "register_trial_message_click": "Master node installation completed successfully. If you want to register your installation and sign up for trial support, please click",
+                "register_trial_message_close": "Otherwise you can close this pane.",
+                "register_trial_link_label": "here"
             },
             "cluster_page": {
                 "tabs": {
