--- a/nailgun/static/i18n/translation.json
+++ b/nailgun/static/i18n/translation.json
@@ -214,10 +214,11 @@
                     "disk_configuration_reset_warning": "Disk configuration will be reset to default after roles change.",
                     "no_nodes_in_environment": "To add nodes to the environment, select the Add Nodes option, choose the nodes you want to allocate and assign roles to each.",
                     "no_nodes_in_fuel": "A pool of one or more unallocated nodes is needed for this operation. To add to the pool, configure nodes to boot from the network (a.k.a. PXE booting). Fuel will automatically provision and discover the nodes.",
-                    "one_controller_restriction": "Only one controller can be assigned in a multi-node deployment that is not Highly-Available (HA).",
-                    "mongo_restriction": "The environment already has deployed MongoDB nodes.",
+                    "role_max_amount_restriction": "Only __count__ __role__ node can be assigned to an environment.",
+                    "role_max_amount_restriction_plural": "Only __count__ __role__ nodes can be assigned to an environment.",
+                    "role_max_amount_reached": "Maximum available amount of nodes with this role is reached.",
+                    "deployed_nodes_warning": "New nodes of this role can not be added to an operational environment.",
                     "incompatible_roles_warning" : "This role cannot be combined with the other roles already selected.",
-                    "new_controllers_in_ha_mode_restriction": "New controllers cannot be added to an operational environment.",
                     "no_filtered_nodes_warning": "There are no nodes found matching the filter value.",
                     "filtered_nodes_count":"__filteredNodesCount__ of __count__ node",
                     "filtered_nodes_count_plural": "__filteredNodesCount__ of __count__ nodes"
@@ -434,23 +435,21 @@
                 },
                 "display_changes": {
                     "title": "Deploy Changes",
-                    "added_node": "Added __nodesCount__ node.",
-                    "added_node_plural": "Added __nodesCount__ nodes.",
-                    "deleted_node": "Deleted __nodesCount__ node.",
-                    "deleted_node_plural":  "Deleted __nodesCount__ nodes.",
-                    "reconfigured_node": "Reconfigured roles of  __nodesCount__ node.",
-                    "reconfigured_node_plural": "Reconfigured roles of  __nodesCount__ nodes.",
+                    "added_node": "__count__ node added.",
+                    "added_node_plural": "__count__ nodes added.",
+                    "deleted_node": "__count__ node deleted.",
+                    "deleted_node_plural":  "__count__ nodes deleted.",
+                    "reconfigured_node": "Reconfigured roles of  __count__ node.",
+                    "reconfigured_node_plural": "Reconfigured roles of  __count__ nodes.",
                     "settings_changes": {
                         "attrs": "OpenStack settings.",
                         "networks": "network settings.",
                         "disks": "disk configuration of the following nodes:"
                     },
-                    "warnings": {
-                        "controller": "Environment should have __nodeSize__ controller node",
-                        "controller_plural": "Environment should have __nodeSize__ controller nodes",
-                        "mongo": "When Ceilometer is enabled, environment should have Telemetry - MongoDB node",
-                        "compute": "Compute nodes are recommended for deployment"
-                    },
+                    "min_role_warning": "Environment should have at least __count__ __role__ node.",
+                    "min_role_warning_plural": "Environment should have at least __count__ __role__ nodes.",
+                    "recommended_role_warning": "__count__ __role__ node is recommended for deployment.",
+                    "recommended_role_warning_plural": "__count__ __role__ nodes is recommended for deployment.",
                     "changed_task_name": "Changed __item__",
                     "changed": "Changed",
                     "deleted": "Deleted",
@@ -989,11 +988,6 @@
                         "networks": "网络设置",
                         "disks": "以下节点的磁盘配置变更："
                     },
-                    "warnings": {
-                        "controller": "环境应该有__nodeSize__个控制节点。",
-                        "controller_plural": "环境应该有__nodeSize__个控制节点",
-                        "compute": "建议部署计算节点。"
-                    },
                     "changed_task_name": "__item__已变更",
                     "changed": "已变更",
                     "deleted": "已删除",
@@ -1261,9 +1255,7 @@
                     "disk_configuration_reset_warning": "ディスク設定は、役割変更後のデフォルトにリセットされます。",
                     "no_nodes_in_environment": "ノードを追加するには、[追加]ノードのオプションを選択し、割り当てたいノードを選択し、役割を割り当てます。",
                     "no_nodes_in_fuel": "この操作は一つ以上の未割り当てのノードのプールが必要とします。プールに追加するには、ネットワーク（別名PXEブート）から起動するようにノードを設定します。Fuelは自動的にノードをプロビジョニングし見つけます。",
-                    "one_controller_restriction": "HAがないマルチノードには唯一つのコントローラを与えます。",
                     "incompatible_roles_warning" : "この役割は、すでに選択された他の役割と組み合わせることはできません。",
-                    "new_controllers_in_ha_mode_restriction": "新しいコントローラは運用中の環境に追加できません。",
                     "no_filtered_nodes_warning": "フィルタ値に一致するノードはありません。",
                     "filtered_nodes_count":"__count__ nodeの__filteredNodesCount__",
                     "filtered_nodes_count_plural": "__count__ nodesの__filteredNodesCount__"
@@ -1483,11 +1475,6 @@
                         "attrs": "OpenStack 設定",
                         "networks": "ネットワーク 設定",
                         "disks": "以下のノードのディスク設定："
-                    },
-                    "warnings": {
-                        "controller": "環境は、__nodeSize__コントローラノードを持っている必要があります。",
-                        "controller_plural": "環境は、__nodeSize__複数コントローラノードを持っている必要があります。",
-                        "compute": "Computeノードは、デプロイのために進まれています。"
                     },
                     "changed_task_name": "__item__を変更しました。",
                     "changed": "変更しました。",
@@ -1750,9 +1737,7 @@
                     "disk_configuration_reset_warning": "디스크는 역할 변경후 기본값으로 재설정됩니다",
                     "no_nodes_in_environment": "환경에 노드를 추가하기 위해서는, 노드추가 옵션을 선택한다음에, 배치하기를 원하는 노드를 선택하고 각각의 역할을 할당합니다",
                     "no_nodes_in_fuel": "배치되지 않은 노드 풀은 이 작업을 위해 필요합니다. 풀에 노드를 추가하려면 네트워크(일명 PXE 부팅)로부터 부팅하도록 노드를 설정합니다. 그러면, Fuel가 자동적으로 노드를 찾아낼 수 있습니다.",
-                    "one_controller_restriction": "HA가아닌 다중노드배치모드에는 오직 하나의 컨트롤러만을  할당할 수 있습니다.",
                     "incompatible_roles_warning" : "이 역할은 이미 선택된 다른 역할과 섞을 수 없습니다.",
-                    "new_controllers_in_ha_mode_restriction": "새로운 컨트롤러는 동작중인 환경에는 추가될 수 없습니다.",
                     "no_filtered_nodes_warning": "필터값과 일치하는 노드가 없습니다.",
                     "filtered_nodes_count":"__count__ node의__filteredNodesCount__ ",
                     "filtered_nodes_count_plural": "__count__ nodes의__filteredNodesCount__"
@@ -1991,11 +1976,6 @@
                         "attrs": "OpenStack 설정",
                         "networks": "네트워크 설정",
                         "disks": "다음 노드들의 디스크 설정:"
-                    },
-                    "warnings": {
-                        "controller": "환경은 __nodeSize__ 컨트롤러 노드가 있어야합니다",
-                        "controller_plural": "환경은 __nodeSize__ 컨트롤러 노드들이 있어야합니다",
-                        "compute": "Compute 노드가 배치를 위해 권장됩니다"
                     },
                     "changed_task_name": "__item__가 변경되었읍니다",
                     "changed": "변경되었읍니다",
