Wizard: disable vCenter option for HA environment
Closes-Bug:#1312653

Change-Id: I8c7eda80d265b9b7b9648645ea7ea7ac2b3c1f4e

--- a/nailgun/static/i18n/translation.json
+++ b/nailgun/static/i18n/translation.json
@@ -383,7 +383,8 @@
                         "kvm_description": "Choose this type of hypervisor if you run OpenStack on hardware",
                         "qemu_description": "Choose this type of hypervisor if you run OpenStack on virtual hosts",
                         "vcenter_description": "Choose this option if you have a vCenter environment with ESXi servers to be used as hypervisors",
-                        "vcenter_warning": "Please remember to enter vCenter environment information in the Settings tab before deploying"
+                        "vcenter_warning": "Please remember to enter vCenter environment information in the Settings tab before deploying",
+                        "disabled_vcenter_alert": "Choose Multi-node deployment mode to enable vCenter."
                     },
                     "network": {
                         "title": "Network",
